--- a/index.html
+++ b/index.html
@@ -3,25 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="X-Frame-Bypass: Web Component extending IFrame to bypass X-Frame-Options: deny/sameorigin">
-	<title>X-Frame-Bypass Web Component Demo</title>
+	<meta name="description" content="ピクセルアートの展示を行っています。">
+	<title>ピクセルアート展示場</title>
 	<style>
-		html, body {
-			margin: 0;
-			padding: 0;
-			height: 100%;
-			overflow: hidden;
+		* {
+		  margin: 0;
+		  padding: 0;
+		  overflow: hidden;
+	  	  height:100vh;
 		}
+
 		iframe {
-			display: block;
-			width: calc(100% - 40px);
-			height: calc(100% - 40px);
-			margin: 20px;
-		}
-		img {
-			position: absolute;
-			top: 0;
-			right: 0;
+			border:none;
+			width:100%;
+			height:100%;
 		}
 	</style>
 	<script src="https://unpkg.com/@ungap/custom-elements-builtin"></script>
